[fix] overflow fix

--- a/src/pages/game/ui/GamePage.module.css
+++ b/src/pages/game/ui/GamePage.module.css
@@ -6,6 +6,7 @@
 	flex-direction: column;
 	align-items: center;
 	position: relative;
+	overflow: hidden;
 }
 
 .score {
